fix spacing on register page

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -201,6 +201,17 @@ a:hover {
   margin-right: 15px;
 }
 
+.pw_confirm_label {
+  width: 205px;
+  text-align: right;
+  margin-right: 15px;
+}
+
+#user_password_confirmation {
+  // background-color: red;
+  margin-right: 95px;
+}
+
 .auth_btn {
   background-color: #00a1c6;
   color: white;
